# shield

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  Sea.toml  diesel.toml  docker-compose.yml
.circleci/: config.yml
.github/workflows/: manifest-test.yml  rust.yml
assets/: OpenAPI.yml
assets/postman/: Shield.postman_collection.json
config/: default.yml  regexes.yml  test.yml
config/env/: default.yml  production.yml  test.yml
docs/: CNAME  latest.md
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/extensions/: active_enums.rs  api_user.rs  client.rs  mod.rs  refresh_token.rs  user.rs
entity/src/middlewares/: api_user.rs  client.rs  mod.rs  realm.rs  resource.rs  resource_group.rs  session.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_realm_table.rs  m20220101_000002_create_client_table.rs  m20220101_000003_create_user_table.rs  m20220101_000004_create_resource_group_table.rs  m20220101_000005_create_resource_table.rs  m20220101_000006_create_refresh_token_table.rs  m20220101_000006_create_session_table.rs  m20220101_000007_create_api_user_table.rs  m20220101_000008_create_refresh_token_table.rs  m20220101_000008_create_session_table.rs
migrations/: down.sql  up.sql
migrations/2024-09-17-162851_initial_shield_db/: down.sql  up.sql
migrations/2024-09-18-153303_db_initialization/: down.sql  up.sql
src/: app.rs  main.rs
src/database/: account.rs  authenticator.rs  client.rs  mod.rs  password_reset_token.rs  prelude.rs  realm.rs  resource.rs  resource_group.rs  session.rs  two_factor_confirmation.rs  two_factor_token.rs  user.rs  verification_token.rs
src/handlers/: auth.rs  client.rs  mod.rs  realm.rs  user.rs
src/mappers/: auth.rs  client.rs  mod.rs  realm.rs  user.rs
src/middleware/: logger.rs  mod.rs  session_info_extractor.rs
src/models/: mod.rs  realm.rs  user.rs
src/organisation/: controller.rs  factory.rs
src/organization/: controller.rs  mod.rs
src/project/: controller.rs  factory.rs  mod.rs
src/routes/: auth.rs  client.rs  health.rs  mod.rs  realm.rs  user.rs  v1.rs
src/schemas/: db.rs
src/services/: auth.rs  client.rs  mod.rs  realm.rs  user.rs
src/utils/: authenticate_api_request.rs  authenticate_request.rs  authenticate_user_request.rs  default_resource_checker.rs  hash.rs  mod.rs  role_checker.rs
(+21 files in other folders)
