[package]
name = "shield"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
cuid2 = "0.1.3"
diesel = { version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
