[package]
name = "shield"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", features = ["yaml"] }
cuid2 = "0.1.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
sea-orm = { version = "1.0.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
